--- a/Hardware/trad_rack.cfg
+++ b/Hardware/trad_rack.cfg
@@ -9,17 +9,18 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_39FFD6054247333126572257-if00
 [trad_rack]
 selector_max_velocity: 400
 selector_max_accel: 10000
-#toolhead_fil_sensor_pin: ^!tr:gpio4  # X-MAX endstop pin on SPIDER
+toolhead_fil_sensor_pin:  ^sb2040: gpio29  # X-MAX endstop pin on SPIDER
 lane_count: 8
 lane_spacing: 17.0
 servo_down_angle: 0.0
 servo_up_angle: 180.0
 selector_unload_length: 17.5
-bowden_length: 990.0
+bowden_length: 110.0
 extruder_load_length: 58.0
 hotend_load_length: 15.0
+toolhead_unload_length: 20.5
 #toolhead_unload_length: 61.0
-bowden_unload_length_mod: -30.0
+#bowden_unload_length_mod: -30.0
 buffer_pull_speed: 300.0    # increase this to 300+ once you are ready
                             # (but some motors may not be able to handle this).
 
