--- a/giano.cfg
+++ b/giano.cfg
@@ -39,7 +39,7 @@ gear_ratio: 50:17
 
 [tmc2209 extruder_stepper giano_extruder_1]
 uart_pin: gianomcu: gpio7
-run_current: 1.000
+run_current: 1.1
 stealthchop_threshold: 999999
 interpolate: False
 # driver_TBL: 1
@@ -66,7 +66,7 @@ gear_ratio: 50:17
 
 [tmc2209 extruder_stepper giano_extruder_2]
 uart_pin: gianomcu: gpio2
-run_current: 1.0
+run_current: 1.1
 stealthchop_threshold: 999999
 interpolate: False
 # driver_TBL: 1
@@ -136,27 +136,34 @@ pre_unload_gcode:
   {% set purge_x = 216 %}
   {% set purge_y = 250 %}
   {% set purge_z = 5 %}
-  SAVE_GCODE_STATE NAME=PRE_unload_state
-  
-  SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=z VALUE={printer.toolhead.position.z+z_up}
-  SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=state_saved VALUE={True}
-  # move up to avoid crashing into the print
-  {% if printer.toolhead.position.z + z_up < z_max %}
-        G91             # relative positioning
-        G1 Z{z_up}    # lift z
+  {% if printer.virtual_sdcard.is_active %}
+
+    SAVE_GCODE_STATE NAME=PRE_unload_state
+    
+    SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=z VALUE={printer.toolhead.position.z+z_up}
+    SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=state_saved VALUE={True}
+    # move up to avoid crashing into the print
+    {% if printer.toolhead.homed_axes == "xyz" %}
+      {% if printer.toolhead.position.z + z_up < z_max %}
+            G91             # relative positioning
+            G1 Z{z_up}    # lift z
+      {% else %}
+            G90             # absolute positioning
+            G1 Z{z_max}     # lift z to max position
+      {% endif %}
+
+      # move to purge position
+
+      G90 # absolute positioning
+      G1 X{purge_x} Y{purge_y} F10000
+      G1 Z{purge_z} F1500
+    {% endif %}
+
+    # make filament tip
+    form_tip COOLING_TUBE_LENGTH=26 COOLING_TUBE_POSITION=19 INITIAL_COOLING_SPEED=19 FINAL_COOLING_SPEED=14 COOLING_MOVES=4 USE_SKINNYDIP=1 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=42 DIP_INSERTION_SPEED=33 DIP_EXTRACTION_SPEED=50 MELT_ZONE_PAUSE=0 COOLING_ZONE_PAUSE=0 UNLOADING_SPEED_START=100 UNLOADING_SPEED=50 RAMMING_VOLUME=0 FINAL_EJECT=0 SS_RAMMING=0
   {% else %}
-        G90             # absolute positioning
-        G1 Z{z_max}     # lift z to max position
+        form_tip COOLING_TUBE_LENGTH=26 COOLING_TUBE_POSITION=19 INITIAL_COOLING_SPEED=19 FINAL_COOLING_SPEED=14 COOLING_MOVES=4 USE_SKINNYDIP=1 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=42 DIP_INSERTION_SPEED=33 DIP_EXTRACTION_SPEED=50 MELT_ZONE_PAUSE=0 COOLING_ZONE_PAUSE=0 UNLOADING_SPEED_START=100 UNLOADING_SPEED=50 RAMMING_VOLUME=0 FINAL_EJECT=0 SS_RAMMING=0
   {% endif %}
-
-  # move to purge position
-
-  G90 # absolute positioning
-  G1 X{purge_x} Y{purge_y} F10000
-  G1 Z{purge_z} F1500
-
-  # make filament tip
-  form_tip COOLING_TUBE_LENGTH=22 COOLING_TUBE_POSITION=19 INITIAL_COOLING_SPEED=20 FINAL_COOLING_SPEED=100 COOLING_MOVES=4 USE_SKINNYDIP=1 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=30 DIP_INSERTION_SPEED=30 DIP_EXTRACTION_SPEED=100 MELT_ZONE_PAUSE=0 COOLING_ZONE_PAUSE=1000 UNLOADING_SPEED_START=100 UNLOADING_SPEED=30 RAMMING_VOLUME=0 FINAL_EJECT=0 SS_RAMMING=0
   M400
 
 post_load_gcode:
@@ -164,12 +171,18 @@ post_load_gcode:
   M118 load_gcode
   
   Wipe_Nozzle
-  G1 Z{printer["gcode_macro Wipe_Nozzle"].z} F1500
+  {% if printer.toolhead.homed_axes == "xyz" %}
+    G1 Z{printer["gcode_macro Wipe_Nozzle"].z} F1500
+  {% endif %}
+
   M400
   {% if state_saved %}
     RESTORE_GCODE_STATE NAME=PRE_unload_state RESTORE_GCODE_STATE=200
+    SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=state_saved VALUE={False}
   {% endif %}
-  
+  G1 E-.5 F600
+  G92 E0   ; reset extruder
+
 tool_count: 2                                   # number of feeding extruders
 debug_level: 2                                  # 0 no debug, 1 normal, 2 verbose, 3 All commands
 unload_filament_after_print: 0                  # 1 = unloads filament after printing has finished
@@ -192,16 +205,31 @@ toolhead_sensor_to_extruder_gear_mm: 20.5         # distance between the filamen
 # ---------------------------------------------
 #  Exposing macros to the UI
 # ---------------------------------------------
+# [gcode_macro T0]
+# variable_color: "FFBF00"
+# variable_active: 0
+# rename_existing: T0.1
+# gcode:
+#   T0.1
+#   M400
+# [gcode_macro T1]
+# variable_color: "FF0000"
+# variable_active: 0
+# rename_existing: T1.1
+# gcode:
+#   T1.1
+#   M400
+
 
 [gcode_macro GIANO_FILAMENT_1]
 gcode:
   T0
-  M400
+
 
 [gcode_macro GIANO_FILAMENT_2]
 gcode:
   T1
-  M400
+
 
 [gcode_macro GIANO_EJECT]
 variable_parameter_TOOL : -1
@@ -263,7 +291,7 @@ gcode:
     G1 X{purge_x} Y{purge_y} F10000
     G1 ZX{purge_z} F1500
     M83      ; relative mode
-    G1 E{purge_amount} F200
+    G1 E{purge_amount} F600
     #G1 E-1 F500
     G4 P2000
     G1 Z{brush_first_z} F1500
@@ -272,10 +300,10 @@ gcode:
          G1 X{brush_first_x} Y{brush_first_y} Z{brush_first_z} F10000
          G1 X{brush_second_x} Y{brush_second_y} Z{brush_second_z} F10000
     {% endfor %}
-    G1 X{brush_second_x} Y{brush_second_y} Z{brush_second_z} F10000
+    G1 X{brush_first_x} Y{brush_first_y} Z{brush_first_z} F10000
     #G1 X{purge_x} Y{purge_y} F10000
     G1 ZX{purge_z} F1500
-
+    G92 E0   ; reset extruder
 
 [gcode_macro FORM_TIP]
 description: Generic tip forming macro
