--- a/printer.cfg
+++ b/printer.cfg
@@ -8,6 +8,8 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 
 [exclude_object]
 
+[save_variables] 
+filename: var.cfg
 
 ##################
 #### Hardware ####
@@ -44,14 +46,14 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 ###################
 #### Trad Rack ####
 ###################
-#[include Hardware/trad_rack.cfg]
-#[include Macros/trad_rack_optional.cfg]
+[include Hardware/trad_rack.cfg]
+[include Macros/trad_rack_optional.cfg]
 
 
 ############################################
 #### Giano_StealthBurner_Dual_Filament  ####
 ############################################
-[include giano.cfg]
+#[include giano.cfg]
 
 [include Macros/start.cfg]
 
