--- a/giano.cfg
+++ b/giano.cfg
@@ -28,7 +28,7 @@ max_extrude_cross_section: 999999
 [extruder_stepper giano_extruder_1]
 extruder:
 step_pin: gianomcu: gpio6
-dir_pin: gianomcu: gpio5
+dir_pin: !gianomcu: gpio5
 enable_pin: !gianomcu: gpio9
 microsteps: 32
 full_steps_per_rotation: 200
@@ -39,7 +39,7 @@ gear_ratio: 50:17
 
 [tmc2209 extruder_stepper giano_extruder_1]
 uart_pin: gianomcu: gpio7
-run_current: 1.1
+run_current: 1.0
 stealthchop_threshold: 999999
 interpolate: False
 # driver_TBL: 1
@@ -56,7 +56,7 @@ interpolate: False
 [extruder_stepper giano_extruder_2]
 extruder:
 step_pin: gianomcu: gpio1
-dir_pin: !gianomcu: gpio0
+dir_pin: gianomcu: gpio0
 enable_pin: !gianomcu: gpio4
 microsteps: 32
 full_steps_per_rotation: 200
@@ -66,7 +66,7 @@ gear_ratio: 50:17
 
 [tmc2209 extruder_stepper giano_extruder_2]
 uart_pin: gianomcu: gpio2
-run_current: 1.1
+run_current: 1.0
 stealthchop_threshold: 999999
 interpolate: False
 # driver_TBL: 1
@@ -136,52 +136,57 @@ pre_unload_gcode:
   {% set purge_x = 216 %}
   {% set purge_y = 250 %}
   {% set purge_z = 5 %}
+  {% set purgemode = printer["gcode_macro Wipe_Nozzle"].purgemode %}
   {% if printer.virtual_sdcard.is_active %}
 
-    SAVE_GCODE_STATE NAME=PRE_unload_state
+    # SAVE_GCODE_STATE NAME=PRE_unload_state
     
-    SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=z VALUE={printer.toolhead.position.z+z_up}
-    SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=state_saved VALUE={True}
-    # move up to avoid crashing into the print
-    {% if printer.toolhead.homed_axes == "xyz" %}
-      {% if printer.toolhead.position.z + z_up < z_max %}
-            G91             # relative positioning
-            G1 Z{z_up}    # lift z
-      {% else %}
-            G90             # absolute positioning
-            G1 Z{z_max}     # lift z to max position
-      {% endif %}
+    # SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=z VALUE={printer.toolhead.position.z+z_up}
+    # SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=state_saved VALUE={True}
+    # # move up to avoid crashing into the print
+    # {% if (printer.toolhead.homed_axes == "xyz" and purgemode) %}
+    
+    #   {% if printer.toolhead.position.z + z_up < z_max %}
+    #         G91             # relative positioning
+    #         G1 Z{z_up}    # lift z
+    #   {% else %}
+    #         G90             # absolute positioning
+    #         G1 Z{z_max}     # lift z to max position
+    #   {% endif %}
 
-      # move to purge position
+    #   # move to purge position
 
-      G90 # absolute positioning
-      G1 X{purge_x} Y{purge_y} F10000
-      G1 Z{purge_z} F1500
-    {% endif %}
+    #   G90 # absolute positioning
+    #   G1 X{purge_x} Y{purge_y} F10000
+    #   G1 Z{purge_z} F1500
+    # {% endif %}
 
-    # make filament tip
-    form_tip COOLING_TUBE_LENGTH=26 COOLING_TUBE_POSITION=19 INITIAL_COOLING_SPEED=19 FINAL_COOLING_SPEED=14 COOLING_MOVES=4 USE_SKINNYDIP=1 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=42 DIP_INSERTION_SPEED=33 DIP_EXTRACTION_SPEED=50 MELT_ZONE_PAUSE=0 COOLING_ZONE_PAUSE=0 UNLOADING_SPEED_START=100 UNLOADING_SPEED=50 RAMMING_VOLUME=0 FINAL_EJECT=0 SS_RAMMING=0
+    # # make filament tip
+    # form_tip COOLING_TUBE_LENGTH=20 COOLING_TUBE_POSITION=61 INITIAL_COOLING_SPEED=19 FINAL_COOLING_SPEED=50 COOLING_MOVES=5 USE_SKINNYDIP=0 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=42 DIP_INSERTION_SPEED=33 DIP_EXTRACTION_SPEED=50 MELT_ZONE_PAUSE=1000 COOLING_ZONE_PAUSE=0 UNLOADING_SPEED_START=30 UNLOADING_SPEED=50 RAMMING_VOLUME=30 FINAL_EJECT=0 SS_RAMMING=0
   {% else %}
-        form_tip COOLING_TUBE_LENGTH=26 COOLING_TUBE_POSITION=19 INITIAL_COOLING_SPEED=19 FINAL_COOLING_SPEED=14 COOLING_MOVES=4 USE_SKINNYDIP=1 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=42 DIP_INSERTION_SPEED=33 DIP_EXTRACTION_SPEED=50 MELT_ZONE_PAUSE=0 COOLING_ZONE_PAUSE=0 UNLOADING_SPEED_START=100 UNLOADING_SPEED=50 RAMMING_VOLUME=0 FINAL_EJECT=0 SS_RAMMING=0
+    form_tip COOLING_TUBE_LENGTH=20 COOLING_TUBE_POSITION=61 INITIAL_COOLING_SPEED=19 FINAL_COOLING_SPEED=50 COOLING_MOVES=5 USE_SKINNYDIP=0 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=42 DIP_INSERTION_SPEED=33 DIP_EXTRACTION_SPEED=50 MELT_ZONE_PAUSE=1000 COOLING_ZONE_PAUSE=0 UNLOADING_SPEED_START=30 UNLOADING_SPEED=50 RAMMING_VOLUME=30 FINAL_EJECT=0 SS_RAMMING=0
   {% endif %}
   M400
 
 post_load_gcode:
-  {% set state_saved = printer["gcode_macro Wipe_Nozzle"].state_saved %}
-  M118 load_gcode
-  
-  Wipe_Nozzle
-  {% if printer.toolhead.homed_axes == "xyz" %}
-    G1 Z{printer["gcode_macro Wipe_Nozzle"].z} F1500
-  {% endif %}
+  # {% set purgemode = printer["gcode_macro Wipe_Nozzle"].purgemode %}
+  # {% if (printer.virtual_sdcard.is_active and purgemode) %}
+  #   {% set state_saved = printer["gcode_macro Wipe_Nozzle"].state_saved %}
+  #   M118 load_gcode
+    
+  #   Wipe_Nozzle
+  #   {% if printer.toolhead.homed_axes == "xyz" %}
+  #     G1 Z{printer["gcode_macro Wipe_Nozzle"].z} F1500
+  #   {% endif %}
 
-  M400
-  {% if state_saved %}
-    RESTORE_GCODE_STATE NAME=PRE_unload_state RESTORE_GCODE_STATE=200
-    SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=state_saved VALUE={False}
-  {% endif %}
-  G1 E-.5 F600
-  G92 E0   ; reset extruder
+  #   M400
+  #   {% if state_saved %}
+  #     RESTORE_GCODE_STATE NAME=PRE_unload_state RESTORE_GCODE_STATE=200
+  #     SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=state_saved VALUE={False}
+  #   {% endif %}
+  #   G1 E-.5 F600
+  #   G92 E0   ; reset extruder
+  # {% endif %}
 
 tool_count: 2                                   # number of feeding extruders
 debug_level: 2                                  # 0 no debug, 1 normal, 2 verbose, 3 All commands
@@ -196,10 +201,10 @@ nozzle_loading_speed_mms: 10                    # extruder speed when moving the
 filament_homing_speed_mms: 20                   # extruder speed when moving the filament inside bowden tube
 filament_parking_speed_mms: 20                  # extruder speed when moving the filament between the filament sensor and the parking position
 
-parking_position_to_nozzle_mm: 50               # distance between the parking position and the nozzle
-toolhead_sensor_to_bowden_cache_mm: 52          # distance between the filament sensor and the filament caching position
+parking_position_to_nozzle_mm: 23               # distance between the parking position and the nozzle
+toolhead_sensor_to_bowden_cache_mm: 60          # distance between the filament sensor and the filament caching position
 toolhead_sensor_to_bowden_parking_mm: 70       # distance between the filament sensor and the filament parking position
-extruder_gear_to_parking_position_mm: 49.5        # distance between the extruder gears and the parking position
+extruder_gear_to_parking_position_mm: 42        # distance between the extruder gears and the parking position
 toolhead_sensor_to_extruder_gear_mm: 20.5         # distance between the filament sensor and the extruder gears
 
 # ---------------------------------------------
@@ -272,6 +277,7 @@ gcode:
 [gcode_macro Wipe_Nozzle]
 variable_z:             100
 variable_state_saved:   False
+variable_purgemode:     False
 gcode:
     {% set purge_x = 216 %}
     {% set purge_y = 250 %}
