--- a/moonraker.conf
+++ b/moonraker.conf
@@ -86,3 +86,11 @@ managed_services:
 origin: https://github.com/FBServiceTech3D/Giano_StealthBurner_Dual_Filament.git
 install_script: install.sh
     
+
+# Crowsnest update_manager entry
+[update_manager crowsnest]
+type: git_repo
+path: ~/crowsnest
+origin: https://github.com/mainsail-crew/crowsnest.git
+managed_services: crowsnest
+install_script: tools/pkglist.sh
