--- a/printer.cfg
+++ b/printer.cfg
@@ -46,14 +46,14 @@ filename: var.cfg
 ###################
 #### Trad Rack ####
 ###################
-[include Hardware/trad_rack.cfg]
-[include Macros/trad_rack_optional.cfg]
+#[include Hardware/trad_rack.cfg]
+#[include Macros/trad_rack_optional.cfg]
 
 
 ############################################
 #### Giano_StealthBurner_Dual_Filament  ####
 ############################################
-#[include giano.cfg]
+[include giano.cfg]
 
 [include Macros/start.cfg]
 
@@ -99,7 +99,7 @@ filename: var.cfg
 #*# max_x = 220.0
 #*#
 #*# [probe]
-#*# z_offset = -0.750
+#*# z_offset = -0.300
 #*#
 #*# [bed_mesh Freddo]
 #*# version = 1
@@ -123,19 +123,21 @@ filename: var.cfg
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.032092, 0.014904, 0.042717
-#*# 	  0.005842, 0.014279, -0.009783
-#*# 	  -0.033221, 0.004592, -0.022283
+#*# 	  0.001554, -0.001571, -0.010009, 0.002804, -0.010946
+#*# 	  0.001241, -0.008446, 0.010616, -0.021259, -0.004071
+#*# 	  0.038429, 0.032491, -0.000009, 0.013429, 0.009991
+#*# 	  0.033429, 0.005616, 0.012804, -0.013134, -0.014696
+#*# 	  0.015929, 0.021866, 0.011241, -0.008446, -0.006884
 #*# tension = 0.2
-#*# min_x = 48.37
-#*# algo = lagrange
-#*# y_count = 3
+#*# min_x = 59.8
+#*# algo = bicubic
+#*# y_count = 5
 #*# mesh_y_pps = 2
-#*# min_y = 108.23
-#*# x_count = 3
-#*# max_y = 139.29
+#*# min_y = 71.15
+#*# x_count = 5
+#*# max_y = 178.83
 #*# mesh_x_pps = 2
-#*# max_x = 139.29
+#*# max_x = 190.16
 #*#
 #*# [bed_mesh hot3]
 #*# version = 1
