--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -3,20 +3,6 @@ extruder: 250
 heater_bed: 0
 
 
-[menu __main homing]
-name: Homing
-icon: home
-
-[menu __main actions]
-name: {{ gettext('Actions') }}
-icon: move
-
-[menu __main actions shutdown]
-name: Shutdown
-icon: shutdown
-method: printer.gcode.script
-params: {"script":"SHUTDOWN"}
-
 
 
 # [menu __main tr]
@@ -49,42 +35,47 @@ params: {"script":"SHUTDOWN"}
 # params: {"script":"TR_LOAD_LANE LANE=1"}
 
 
-[menu __main giano]
+[menu __main  giano]
 name: {{ gettext('Giano') }}
 icon: toolchanger
 
-[menu __main giano GIANO_home]
+[menu __main  giano GIANO_home]
 name: Giano Home
 icon: home
 method: printer.gcode.script
 params: {"script":"GIANO_HOME"}
 
-[menu __main giano GIANO_EJECT]
+[menu __main  giano GIANO_EJECT]
 name: Eject
 icon: toolchanger
 method: printer.gcode.script
 params: {"script":"GIANO_EJECT"}
 
-[menu __main giano GIANO_FILAMENT_1]
+[menu __main  giano GIANO_FILAMENT_1]
 name: Filament 1
 icon: extruder-1
 method: printer.gcode.script
 params: {"script":"GIANO_FILAMENT_1"}
 
 
-[menu __main giano GIANO_FILAMENT_2]
+[menu __main  giano GIANO_FILAMENT_2]
 name: Filament 2
 icon: extruder-2
 method: printer.gcode.script
 params: {"script":"GIANO_FILAMENT_2"}
 
-[menu __main giano SHAPE_TIP]
+[menu __main  giano SHAPE_TIP]
 name: Shape Tip
 icon: extruder-2
 method: printer.gcode.script
 params: {"script":"FORM_TIP"}
 
 
+[menu __main  giano shutdown]
+name: Shutdown
+icon: shutdown
+method: printer.gcode.script
+params: {"script":"SHUTDOWN"}
 
 
 # [menu __main tr head_0]
