new giano crownsnet 3

--- a/Macros/start.cfg
+++ b/Macros/start.cfg
@@ -43,7 +43,7 @@ gcode:
   M190 S{BED}  ;Set bed temperature and wait
   Nevermore_on  ;Turn on Nevermore
   BED_MESH_CLEAR  ;Clear Bed Mesh
-  BED_MESH_CALIBRATE  ;Adaptive Mesh [Auto]
+  BED_MESH_CALIBRATE ADAPTIVE=1  ;Adaptive Mesh [Auto]
   M109 S{EXTRUDER}  ;Set extruder temperature and wait
   G28 Z  ;Home Z axis
   {% if TOOL > -1 and printer["trad_rack"] != null %}
@@ -52,7 +52,7 @@ gcode:
   {% endif %}
   SET_PRESSURE_ADVANCE ADVANCE=0.0460
   #T{TOOL}
-  #_ADAPTIVE_PURGE  ;Adaptive Purge
+  _ADAPTIVE_PURGE  ;Adaptive Purge
 
 
 
