--- a/moonraker.conf
+++ b/moonraker.conf
@@ -54,17 +54,42 @@ install_script: scripts/KlipperScreen-install.sh
 managed_services: KlipperScreen
 
 
-[update_manager Klipper-Adaptive-Meshing-Purging]
+[update_manager Adaptive-meshing-beta]
 type: git_repo
 channel: dev
-path: ~/Klipper-Adaptive-Meshing-Purging
-origin: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging.git
+path: ~/adaptive-meshing-beta
+origin: https://github.com/voidtrance/klipper.git
 managed_services: klipper
-primary_branch: main
+primary_branch: adaptive-bed-mesh
+
+
+    
+
+
+# [update_manager Giano_StealthBurner_Dual_Filament]
+# type: git_repo
+# channel: beta
+# primary_branch: main
+# path: ~/Giano_StealthBurner_Dual_Filament
+# managed_services:
+#     klipper
+#     moonraker
+# origin: https://github.com/FBServiceTech3D/Giano_StealthBurner_Dual_Filament.git
+# install_script: install.sh
+    
+
+# Crowsnest update_manager entry
+# [update_manager crowsnest]
+# type: git_repo
+# path: ~/crowsnest
+# origin: https://github.com/mainsail-crew/crowsnest.git
+# managed_services: crowsnest
+# install_script: tools/pkglist.sh
+
 
 [update_manager Gab3d-Klipper-Utilities]
 type: git_repo
-channel: dev
+channel: beta
 primary_branch: main
 path: ~/Gab3d-Klipper-Utilities
 managed_services:
@@ -73,24 +98,3 @@ managed_services:
 origin: https://github.com/gab-3d/Gab3d-Klipper-Utilities.git
 install_script: install.sh
     
-
-
-[update_manager Giano_StealthBurner_Dual_Filament]
-type: git_repo
-channel: beta
-primary_branch: main
-path: ~/Giano_StealthBurner_Dual_Filament
-managed_services:
-    klipper
-    moonraker
-origin: https://github.com/FBServiceTech3D/Giano_StealthBurner_Dual_Filament.git
-install_script: install.sh
-    
-
-# Crowsnest update_manager entry
-[update_manager crowsnest]
-type: git_repo
-path: ~/crowsnest
-origin: https://github.com/mainsail-crew/crowsnest.git
-managed_services: crowsnest
-install_script: tools/pkglist.sh
