--- a/printer.cfg
+++ b/printer.cfg
@@ -1,6 +1,6 @@
 
 [include shell_command.cfg]
-[include gab-3d-utilities.cfg]
+#[include gab-3d-utilities.cfg]
 
 [mcu]
 ##  this is fixwd should not be changed for big dipper
@@ -15,22 +15,23 @@ filename: var.cfg
 #### Hardware ####
 ##################
 [include Hardware/octopus.cfg]
-[include Hardware/toolboard.cfg]
+
 [include Hardware/kinematics.cfg]
 [include Hardware/Probe.cfg]
 [include Hardware/sb_leds.cfg]
+[include Hardware/toolboard.cfg]
 
 
 ################
 #### Macros ####
 ################
-[include Macros/arc.cfg]
+#[include Macros/arc.cfg]
 [include Macros/nozzle_scrub.cfg]
 #[include Macros/printer_macros.cfg]
 [include Macros/base_macros.cfg]
 [include Macros/parking.cfg]
 
-
+[include Macros/cut.cfg]
 
 [include Macros/pa_calibrate.cfg]
 [include Macros/shelly.cfg]
@@ -41,6 +42,14 @@ filename: var.cfg
 [include Macros/sb_leds_macros.cfg]
 [include Macros/mainsail.cfg]
 [include Macros/sensorless.cfg]
+
+[gcode_arcs]
+resolution: 1.0
+#   An arc will be split into segments. Each segment's length will
+#   equal the resolution in mm set above. Lower values will produce a
+#   finer arc, but also more work for your machine. Arcs smaller than
+#   the configured value will become straight lines. The default is
+#   1mm.
 
 
 ###################
@@ -99,7 +108,7 @@ filename: var.cfg
 #*# max_x = 220.0
 #*#
 #*# [probe]
-#*# z_offset = -0.300
+#*# z_offset = -0.270
 #*#
 #*# [bed_mesh Freddo]
 #*# version = 1
@@ -119,25 +128,6 @@ filename: var.cfg
 #*# max_y = 220.0
 #*# mesh_x_pps = 2
 #*# max_x = 220.0
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	  0.001554, -0.001571, -0.010009, 0.002804, -0.010946
-#*# 	  0.001241, -0.008446, 0.010616, -0.021259, -0.004071
-#*# 	  0.038429, 0.032491, -0.000009, 0.013429, 0.009991
-#*# 	  0.033429, 0.005616, 0.012804, -0.013134, -0.014696
-#*# 	  0.015929, 0.021866, 0.011241, -0.008446, -0.006884
-#*# tension = 0.2
-#*# min_x = 59.8
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 71.15
-#*# x_count = 5
-#*# max_y = 178.83
-#*# mesh_x_pps = 2
-#*# max_x = 190.16
 #*#
 #*# [bed_mesh hot3]
 #*# version = 1
@@ -200,3 +190,20 @@ filename: var.cfg
 #*# max_x = 184.79
 #*# min_y = 65.21
 #*# max_y = 184.79
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.020313, 0.025313, 0.008125
+#*# 	  0.011875, 0.000000, 0.003125
+#*# 	  0.016563, 0.010625, 0.002813
+#*# x_count = 3
+#*# y_count = 3
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 108.0
+#*# max_x = 142.0
+#*# min_y = 94.5
+#*# max_y = 155.48
