--- a/Hardware/octopus.cfg
+++ b/Hardware/octopus.cfg
@@ -11,22 +11,27 @@ pid_Kp: 21.503
 pid_Ki: 1.419
 pid_Kd: 81.443
 min_temp: 0
-max_temp: 270
+max_temp: 280
 pressure_advance: 0.045
 pressure_advance_smooth_time: 0.040
 max_extrude_only_distance: 200
 max_extrude_cross_section: 50.0
-sensor_type: ATC Semitec 104NT-4-R025H42G #rapido
+#sensor_type: ATC Semitec 104NT-4-R025H42G #rapido
+sensor_type: PT1000
+pullup_resistor: 1000
 #sensor_type: Generic 3950 #masp
-microsteps: 32
-full_steps_per_rotation: 200                                       # Set to 200 for LDO 1.8° stepper motor, and set to 400 for OMC(StepperOnline) 0.9° stepper motor
-# rotation_distance: 5.7   #lgx lite                                           # See calibrating rotation_distance on extruders doc
+microsteps: 16
+# full_steps_per_rotation: 200                                       # Set to 200 for LDO 1.8° stepper motor, and set to 400 for OMC(StepperOnline) 0.9° stepper motor
+# # rotation_distance: 5.7   #lgx lite                                           # See calibrating rotation_distance on extruders doc
 rotation_distance: 22.6789511 # stealth
 gear_ratio: 50:10 # stealth
-min_extrude_temp: 10
+# rotation_distance: 47.088
+# gear_ratio: 9:1
+microsteps: 16
+min_extrude_temp: 0
 
 [tmc2209 extruder]
-run_current: 0.7
+run_current: 0.6
 sense_resistor: 0.110
 stealthchop_threshold: 0
 interpolate: False
@@ -73,7 +78,7 @@ homing_positive_dir: true
 [tmc2209 stepper_y]
 uart_pin: PF2
 interpolate: False
-run_current: 0.9
+run_current: 1
 stealthchop_threshold: 0
 diag_pin: ^PG12
 driver_SGTHRS: 62   #questo valore dovete trovarlo partendo da 255 e scendendo fino a quando la home non funziona
@@ -120,7 +125,7 @@ homing_positive_dir: true
 # uart_pin: PD11
 uart_pin: PC7
 interpolate: False
-run_current: 0.9
+run_current: 1
 stealthchop_threshold: 0
 diag_pin: ^PG11
 driver_SGTHRS: 58   #questo valore dovete trovarlo partendo da 255 e scendendo fino a quando la home non funziona
