--- a/giano.cfg
+++ b/giano.cfg
@@ -137,35 +137,37 @@ pre_unload_gcode:
   {% set purge_y = 250 %}
   {% set purge_z = 5 %}
   {% set purgemode = printer["gcode_macro Wipe_Nozzle"].purgemode %}
-  {% if printer.virtual_sdcard.is_active %}
+  # {% if printer.virtual_sdcard.is_active %}
+  #   _MMU_CUT_TIP
 
-    # SAVE_GCODE_STATE NAME=PRE_unload_state
+  #   # SAVE_GCODE_STATE NAME=PRE_unload_state
     
-    # SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=z VALUE={printer.toolhead.position.z+z_up}
-    # SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=state_saved VALUE={True}
-    # # move up to avoid crashing into the print
-    # {% if (printer.toolhead.homed_axes == "xyz" and purgemode) %}
+  #   # SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=z VALUE={printer.toolhead.position.z+z_up}
+  #   # SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=state_saved VALUE={True}
+  #   # # move up to avoid crashing into the print
+  #   # {% if (printer.toolhead.homed_axes == "xyz" and purgemode) %}
     
-    #   {% if printer.toolhead.position.z + z_up < z_max %}
-    #         G91             # relative positioning
-    #         G1 Z{z_up}    # lift z
-    #   {% else %}
-    #         G90             # absolute positioning
-    #         G1 Z{z_max}     # lift z to max position
-    #   {% endif %}
+  #   #   {% if printer.toolhead.position.z + z_up < z_max %}
+  #   #         G91             # relative positioning
+  #   #         G1 Z{z_up}    # lift z
+  #   #   {% else %}
+  #   #         G90             # absolute positioning
+  #   #         G1 Z{z_max}     # lift z to max position
+  #   #   {% endif %}
 
-    #   # move to purge position
+  #   #   # move to purge position
 
-    #   G90 # absolute positioning
-    #   G1 X{purge_x} Y{purge_y} F10000
-    #   G1 Z{purge_z} F1500
-    # {% endif %}
+  #   #   G90 # absolute positioning
+  #   #   G1 X{purge_x} Y{purge_y} F10000
+  #   #   G1 Z{purge_z} F1500
+  #   # {% endif %}
 
-    # # make filament tip
-    # form_tip COOLING_TUBE_LENGTH=20 COOLING_TUBE_POSITION=61 INITIAL_COOLING_SPEED=19 FINAL_COOLING_SPEED=50 COOLING_MOVES=5 USE_SKINNYDIP=0 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=42 DIP_INSERTION_SPEED=33 DIP_EXTRACTION_SPEED=50 MELT_ZONE_PAUSE=1000 COOLING_ZONE_PAUSE=0 UNLOADING_SPEED_START=30 UNLOADING_SPEED=50 RAMMING_VOLUME=30 FINAL_EJECT=0 SS_RAMMING=0
-  {% else %}
-    form_tip COOLING_TUBE_LENGTH=20 COOLING_TUBE_POSITION=61 INITIAL_COOLING_SPEED=19 FINAL_COOLING_SPEED=50 COOLING_MOVES=5 USE_SKINNYDIP=0 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=42 DIP_INSERTION_SPEED=33 DIP_EXTRACTION_SPEED=50 MELT_ZONE_PAUSE=1000 COOLING_ZONE_PAUSE=0 UNLOADING_SPEED_START=30 UNLOADING_SPEED=50 RAMMING_VOLUME=30 FINAL_EJECT=0 SS_RAMMING=0
-  {% endif %}
+  #   # # make filament tip
+  #   # form_tip COOLING_TUBE_LENGTH=20 COOLING_TUBE_POSITION=61 INITIAL_COOLING_SPEED=19 FINAL_COOLING_SPEED=50 COOLING_MOVES=5 USE_SKINNYDIP=0 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=42 DIP_INSERTION_SPEED=33 DIP_EXTRACTION_SPEED=50 MELT_ZONE_PAUSE=1000 COOLING_ZONE_PAUSE=0 UNLOADING_SPEED_START=30 UNLOADING_SPEED=50 RAMMING_VOLUME=30 FINAL_EJECT=0 SS_RAMMING=0
+  # {% else %}
+  #   form_tip COOLING_TUBE_LENGTH=20 COOLING_TUBE_POSITION=61 INITIAL_COOLING_SPEED=19 FINAL_COOLING_SPEED=50 COOLING_MOVES=5 USE_SKINNYDIP=0 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=42 DIP_INSERTION_SPEED=33 DIP_EXTRACTION_SPEED=50 MELT_ZONE_PAUSE=1000 COOLING_ZONE_PAUSE=0 UNLOADING_SPEED_START=30 UNLOADING_SPEED=50 RAMMING_VOLUME=30 FINAL_EJECT=0 SS_RAMMING=0
+  # {% endif %}
+  _MMU_CUT_TIP
   M400
 
 post_load_gcode:
@@ -203,7 +205,7 @@ filament_parking_speed_mms: 20                  # extruder speed when moving the
 
 parking_position_to_nozzle_mm: 23               # distance between the parking position and the nozzle
 toolhead_sensor_to_bowden_cache_mm: 60          # distance between the filament sensor and the filament caching position
-toolhead_sensor_to_bowden_parking_mm: 70       # distance between the filament sensor and the filament parking position
+toolhead_sensor_to_bowden_parking_mm: 210       # distance between the filament sensor and the filament parking position
 extruder_gear_to_parking_position_mm: 42        # distance between the extruder gears and the parking position
 toolhead_sensor_to_extruder_gear_mm: 20.5         # distance between the filament sensor and the extruder gears
 
