--- a/giano.cfg
+++ b/giano.cfg
@@ -1,6 +1,7 @@
 # -------------------------------------										
 #  GIANO CONFIGURATION
 # -------------------------------------
+[include giano_macro.cfg]
 
 [mcu gianomcu]
 ##  this is fixwd should not be changed for big dipper
@@ -32,14 +33,14 @@ dir_pin: !gianomcu: gpio5
 enable_pin: !gianomcu: gpio9
 microsteps: 32
 full_steps_per_rotation: 200
-rotation_distance: 22.6789511 
-gear_ratio: 50:17  
+rotation_distance: 22.23                                            # See calibrating rotation_distance on extruders doc
+gear_ratio: 50:10  
 
 
 
 [tmc2209 extruder_stepper giano_extruder_1]
 uart_pin: gianomcu: gpio7
-run_current: 1.0
+run_current: 0.5
 stealthchop_threshold: 999999
 interpolate: False
 # driver_TBL: 1
@@ -56,17 +57,17 @@ interpolate: False
 [extruder_stepper giano_extruder_2]
 extruder:
 step_pin: gianomcu: gpio1
-dir_pin: gianomcu: gpio0
+dir_pin: !gianomcu: gpio0
 enable_pin: !gianomcu: gpio4
 microsteps: 32
 full_steps_per_rotation: 200
-rotation_distance: 22.6789511 
-gear_ratio: 50:17  
+rotation_distance: 22.23                                            # See calibrating rotation_distance on extruders doc
+gear_ratio: 50:10                                                   # For Mini Afterburner
 
 
 [tmc2209 extruder_stepper giano_extruder_2]
 uart_pin: gianomcu: gpio2
-run_current: 1.0
+run_current: 0.5
 stealthchop_threshold: 999999
 interpolate: False
 # driver_TBL: 1
@@ -140,7 +141,7 @@ pre_unload_gcode:
   # {% if printer.virtual_sdcard.is_active %}
   #   _MMU_CUT_TIP
 
-  #   # SAVE_GCODE_STATE NAME=PRE_unload_state
+  #SAVE_GCODE_STATE NAME=PRE_unload_state
     
   #   # SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=z VALUE={printer.toolhead.position.z+z_up}
   #   # SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=state_saved VALUE={True}
@@ -189,9 +190,10 @@ post_load_gcode:
   #   G1 E-.5 F600
   #   G92 E0   ; reset extruder
   # {% endif %}
+  Wipe_Nozzle
 
 tool_count: 2                                   # number of feeding extruders
-debug_level: 2                                  # 0 no debug, 1 normal, 2 verbose, 3 All commands
+debug_level: 3                                  # 0 no debug, 1 normal, 2 verbose, 3 All commands
 unload_filament_after_print: 0                  # 1 = unloads filament after printing has finished
                                                 # 0 = filament stays in hotend
 use_filament_caching: 1                         # 1 = giano caches the filament right behind the toolhead sensor instead of completely unloading it
@@ -200,14 +202,14 @@ extruder_push_and_pull_test: 0                  # 1 = test if filament could suc
                                                 # 0 = do not test
 
 nozzle_loading_speed_mms: 10                    # extruder speed when moving the filament between the parking position and the nozzle 
-filament_homing_speed_mms: 20                   # extruder speed when moving the filament inside bowden tube
+filament_homing_speed_mms: 60                   # extruder speed when moving the filament inside bowden tube
 filament_parking_speed_mms: 20                  # extruder speed when moving the filament between the filament sensor and the parking position
 
-parking_position_to_nozzle_mm: 23               # distance between the parking position and the nozzle
-toolhead_sensor_to_bowden_cache_mm: 60          # distance between the filament sensor and the filament caching position
-toolhead_sensor_to_bowden_parking_mm: 210       # distance between the filament sensor and the filament parking position
-extruder_gear_to_parking_position_mm: 42        # distance between the extruder gears and the parking position
-toolhead_sensor_to_extruder_gear_mm: 20.5         # distance between the filament sensor and the extruder gears
+parking_position_to_nozzle_mm: 20               # distance between the parking position and the nozzle
+toolhead_sensor_to_bowden_cache_mm: 390          # distance between the filament sensor and the filament caching position
+toolhead_sensor_to_bowden_parking_mm: 400       # distance between the filament sensor and the filament parking position
+extruder_gear_to_parking_position_mm: 25        # distance between the extruder gears and the parking position
+toolhead_sensor_to_extruder_gear_mm: 20         # distance between the filament sensor and the extruder gears
 
 # ---------------------------------------------
 #  Exposing macros to the UI
@@ -284,8 +286,8 @@ gcode:
     {% set purge_x = 216 %}
     {% set purge_y = 250 %}
     {% set purge_z = 5 %}
-    {% set purge_amount = 25 %}
-
+    {% set purge_amount = 90 %}
+    {% set original_z = printer.toolhead.position.z %}
     {% set brush_first_x = 174 %}
     {% set brush_first_y = 249 %}
     {% set brush_first_z = 5 %}
@@ -297,7 +299,7 @@ gcode:
 
     G90
     G1 X{purge_x} Y{purge_y} F10000
-    G1 ZX{purge_z} F1500
+    G1 Z{purge_z} F1500
     M83      ; relative mode
     G1 E{purge_amount} F600
     #G1 E-1 F500
@@ -310,7 +312,7 @@ gcode:
     {% endfor %}
     G1 X{brush_first_x} Y{brush_first_y} Z{brush_first_z} F10000
     #G1 X{purge_x} Y{purge_y} F10000
-    G1 ZX{purge_z} F1500
+    G1 Z{original_z} F1500
     G92 E0   ; reset extruder
 
 [gcode_macro FORM_TIP]
