--- a/Macros/start.cfg
+++ b/Macros/start.cfg
@@ -46,13 +46,13 @@ gcode:
   BED_MESH_CALIBRATE ADAPTIVE=1  ;Adaptive Mesh [Auto]
   M109 S{EXTRUDER}  ;Set extruder temperature and wait
   G28 Z  ;Home Z axis
-  {% if TOOL > -1 and printer["trad_rack"] != null %}
+  #{% if TOOL > -1 and printer["trad_rack"] != null %}
     
-    TR_LOAD_TOOLHEAD LANE={TOOL}
-  {% endif %}
+  #  TR_LOAD_TOOLHEAD LANE={TOOL}
+  #{% endif %}
   SET_PRESSURE_ADVANCE ADVANCE=0.0460
   #T{TOOL}
-  _ADAPTIVE_PURGE  ;Adaptive Purge
+  #_ADAPTIVE_PURGE  ;Adaptive Purge
 
 
 
